Update .gitignore to include additional cache directories and remove autoreload from training notebook

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ checkpoints/*
 __pycache__/*
 backbones/__pycache__/*
 models/__pycache__/*
+model/__pycache__/*
+losses/__pycache__/*
+data/__pycache__/*
