feat: Enhance multi-source dataset handling and sampling
- Updated .gitignore to include __pycache__ and related files.
- Modified PreparedForgeryDataset to accept multiple prepared roots and combined manifests, improving dataset loading flexibility.
- Introduced EvenMultiSourceBatchSampler and EvenMultiSourceBalancedSampler for balanced sampling across multiple dataset sources.
- Added a test script for validating multi-dataset loading and batching functionality.
- Created unit tests to ensure correct behavior of dataset loading and trainer integration.
- Updated training configuration to support multiple prepared roots and adjusted DataLoader behavior accordingly.
- Enhanced training launcher to handle combined manifests and dataset preparation more robustly.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-prepared/*
+# Ignore all __pycache__
+__pycache__/
+**/__pycache__/
+*.pyc
+*.pyo
+*.pyd
 datasets/*
+prepared/*
 checkpoints/*
-__pycache__/*
-backbones/__pycache__/*
-models/__pycache__/*
-model/__pycache__/*
-losses/__pycache__/*
-data/__pycache__/*
